--- a/attendance_app/static/attendance_app/css/style.css
+++ b/attendance_app/static/attendance_app/css/style.css
@@ -37,6 +37,7 @@ header {
     top: 0;
     width: 100%;
     min-height: 100px;
+    padding: 1em 1em;
     flex: 1;
     border-radius: 1em;
     z-index: 1;
@@ -72,13 +73,12 @@ footer {
 .sidebar-col {
     background-color: rgba(255, 255, 255, 0.15);
     border: 2px solid #ffffff10;
-    flex: 0.5;
+    flex: 0.6;
     border-radius: 1em;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
     display: flex;
     background: rgba(255, 255, 255, 0.15);
     border: 2px solid #ffffff10;
-    
 }
 
 /* Contains the table */
@@ -249,8 +249,10 @@ nav a:is(:link, :active, :visited).active {
     grid-template-areas:
         "box-2 box-1 box-3"
     ;
-    width: 210px;
+    width: 100%;
     height: 50px;
+    justify-content: right;
+    margin-bottom: 1em;
 }
 
 .students-action-button-container {
@@ -260,8 +262,9 @@ nav a:is(:link, :active, :visited).active {
     grid-template-areas:
         "box-1 box-2"
     ;
-    width: 110px;
+    width: 100%;
     height: 50px;
+    justify-content: right;
 }
 
 .device-action-button-container {
@@ -271,8 +274,9 @@ nav a:is(:link, :active, :visited).active {
     grid-template-areas:
         "box-1 box-2"
     ;
-    width: 150px;
+    width: 100%;
     height: 50px;
+    justify-content: right;
 }
 
 .view-button {
@@ -370,7 +374,7 @@ nav a:is(:link, :active, :visited).active {
     box-shadow: 0 0 5px rgb(0, 0, 0);
 }
 
-/* Sidebar for mobile devices */
+/* Sidebar for mobile and some tablet devices */
 .sidebar {
     flex-direction: column;
     justify-content: flex-start;
@@ -546,6 +550,7 @@ nav a:is(:link, :active, :visited).active {
         justify-content: center;
         width: 100px;
         height: 70px;
+        margin-bottom: 1em;
 
     }
     .students-action-button-container {
@@ -558,6 +563,7 @@ nav a:is(:link, :active, :visited).active {
         justify-content: center;
         width: 100px;
         height: 30px;
+        margin-bottom: 1em;
     }
     
     .device-action-button-container {
@@ -570,6 +576,7 @@ nav a:is(:link, :active, :visited).active {
         justify-content: center;
         width: 150px;
         height: 40px;
+        margin-bottom: 1em;
     }
     
     .view-button {
@@ -592,7 +599,7 @@ nav a:is(:link, :active, :visited).active {
         width: 90px;
         height: 40px;
         padding: 5px;
-        font-size: 12px;
+        font-size: 16px;
     }
 }
 
@@ -645,7 +652,7 @@ nav a:is(:link, :active, :visited).active {
 }
 
 /* Size of the web pages for mobile devices*/
-@media (max-width: 400px) {
+@media (max-width: 420px) {
     body {
         width: 100%;
     }
@@ -680,22 +687,34 @@ nav a:is(:link, :active, :visited).active {
         width: 30px;
         font-size: 30px; 
     }
+    .dropdown-content {
+        font-size: 12px;
+    }
     .sidebar-button{
         height: 30px;
         width: 30px;
     }
     .sidebar {
-        font-size: 15px;
+        font-size: 12px;
         left: 10px;
+        height: 340px;
+        width: 170px;
+        svg {
+            height: 15px;
+            width: 15px;
+        }
+    }
+    .sidebar li {
+        width: 150px;
+    }
+    .sidebar-col {
+        display: none;
     }
     section {
         box-shadow: -10px 0 10px rgb(0, 0, 0, 0.1);
     }
     footer {
-        font-size: 10px;
-    }
-    .sidebar-col {
-        display: none;
+        font-size: 12px;
     }
     .events-action-button-container {
         display: grid;
@@ -707,8 +726,10 @@ nav a:is(:link, :active, :visited).active {
         ;
         gap: 0.5em;
         justify-content: right;
+        margin-left: auto;
         width: 160px;
         height: 60px;
+        margin-bottom: 1em;
 
     }
     .students-action-button-container {
@@ -719,8 +740,10 @@ nav a:is(:link, :active, :visited).active {
         ;
         gap: 0.5em;
         justify-content: right;
+        margin-left: auto;
         width: 160px;
         height: 30px;
+        margin-bottom: 1em;
     }
     
     .device-action-button-container {
@@ -731,8 +754,10 @@ nav a:is(:link, :active, :visited).active {
         ;
         gap: 1em;
         justify-content: right;
+        margin-left: auto;
         width: 160px;
         height: 30px;
+        margin-bottom: 1em;
     }
     
     .view-button {
