--- a/attendance_app/static/attendance_app/css/table.css
+++ b/attendance_app/static/attendance_app/css/table.css
@@ -1,10 +1,11 @@
 
 /* Table Design */
 .content-table {
+    font-size: 16px;
     border-collapse: collapse;
     margin: 0;
+    min-width: 80vw;
     width: 100%;
-    border-radius: 5px 5px 0 0;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 }
 
@@ -13,6 +14,7 @@
 }
 
 .content-table th {
+    width: 130px;
     background-color: #31511E;
     color: #fff;
     text-align: left;
@@ -51,10 +53,11 @@
 }
 
 
+
 @media (max-width: 760px) {
     .content-table  {
-        font-size: 10px;
         border: 2px solid #31511E;
+        min-width: 80vw;
         margin: 0;
     }
     .content-table thead tr {
@@ -71,10 +74,13 @@
     .content-table td {
         text-align: right;
         display: block;
-        font-size: 1em;
     }
     .content-table td::before {
         content: attr(data-title) ": ";
         float: left;
+    }
+    .content-table td:last-child {
+        justify-content: right;
+        display: block;
     }
 }
